Actualizacion de botones de vista Music pagina1

--- a/web/triviaSerieOneQuestion.xhtml
+++ b/web/triviaSerieOneQuestion.xhtml
@@ -15,13 +15,15 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="application/javascript"/>
 
-    <link href="css/estilos.css" rel="stylesheet"/>
+    <link href="css/triviaQuestion.css" rel="stylesheet"/>
 
 
 </h:head>
 
 <h:body class="make-flex">
     <h2>Trivias 1/10</h2>
+    <br></br>
+    <h1>00:00:34</h1>
 
     <h3>¿Que ojo pierde el personaje conocido como El Gobernador en The Walking Dead?</h3><td></td>>
     <a title="CIBERTEC" href="https://www.cibertec.edu.pe/" target="_blank"><img src="imagenes/cibertec.jpg" alt="CIBERTEC" width="100" height="100"/></a>
@@ -30,10 +32,10 @@
     <div class="container twidth make-flex">
         <p id="question"></p>
         <div class="optnContainer make-flex">
-            <p id="Izquierdo" class="answer">Izquierdo</p>
-            <p id="Derecho" class="answer">Derecho</p>
-            <p id="Los dos" class="answer">Los dos</p>
-            <p id="No pierde ninguno" class="answer">No pierde ninguno</p>
+            <p id="Izquierdo" class="answer">1)     Izquierdo</p>
+            <p id="Derecho" class="answer">2)       Derecho</p>
+            <p id="Los dos" class="answer">3)       Los dos</p>
+            <p id="No pierde ninguno" class="answer">4)     No pierde ninguno</p>
             <div id="waiting"></div>
             <div id="waitanim"></div>
         </div>
