--- a/web/triviaSerieTwoQuestion.xhtml
+++ b/web/triviaSerieTwoQuestion.xhtml
@@ -15,25 +15,27 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="application/javascript"/>
 
-    <link href="css/estilos.css" rel="stylesheet"/>
+    <link href="css/triviaQuestion.css" rel="stylesheet"/>
 
 
 </h:head>
 
 <h:body class="make-flex">
-    <h2>Trivias 1/10</h2>
+    <h2>Trivias 10/10</h2>
+    <br></br>
+    <h1>00:00:34</h1>
 
-    <h3>¿Que ojo pierde el personaje conocido como El Gobernador en The Walking Dead?</h3><td></td>>
-    <a title="CIBERTEC" href="https://www.cibertec.edu.pe/" target="_blank"><img src="imagenes/cibertec.jpg" alt="CIBERTEC" width="100" height="100"/></a>
-    <a title="ICPNA" href="https://www.icpna.edu.pe/" target="_blank"><img src="imagenes/icpna.jpg" alt="ICPNA" width="100" height="100"/></a>
+    <h3>¿En qué año se emitio la 1ra temporada de Friends?</h3><td></td>>
+    <a title="BCP" href="https://www.viabcp.com" target="_blank"><img src="imagenes/BCP.jpg" alt="BCP" width="100" height="100"/></a>
+    <a title="BRITANICO" href="https://www.britanico.edu.pe/" target="_blank"><img src="imagenes/britanico.jpg" alt="BRITANICO" width="100" height="100"/></a>
 
     <div class="container twidth make-flex">
         <p id="question"></p>
         <div class="optnContainer make-flex">
-            <p id="Izquierdo" class="answer">Izquierdo</p>
-            <p id="Derecho" class="answer">Derecho</p>
-            <p id="Los dos" class="answer">Los dos</p>
-            <p id="No pierde ninguno" class="answer">No pierde ninguno</p>
+            <p id="Izquierdo" class="answer">1)     1994</p>
+            <p id="Derecho" class="answer">2)       1999</p>
+            <p id="2000" class="answer">3)      2000</p>
+            <p id="1987" class="answer">4)      1987</p>
             <div id="waiting"></div>
             <div id="waitanim"></div>
         </div>
