--- a/web/triviaMusicOneQuestion.xhtml
+++ b/web/triviaMusicOneQuestion.xhtml
@@ -15,35 +15,36 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="application/javascript"/>
 
-    <link href="css/estilos.css" rel="stylesheet"/>
+    <link href="css/triviaQuestion.css" rel="stylesheet"/>
 
 
 </h:head>
 
 <h:body class="make-flex">
     <h2>Trivias 1/10</h2>
+    <br></br>
+    <h1>00:00:34</h1>
 
-    <h3>¿Que ojo pierde el personaje conocido como El Gobernador en The Walking Dead?</h3><td></td>>
-    <a title="BCP" href="https://www.viabcp.com" target="_blank"><img src="imagenes/BCP.jpg" alt="BCP" width="150" height="150"/></a>
-    <a title="BRITANICO" href="https://www.britanico.edu.pe/" target="_blank"><img src="imagenes/britanico.jpg" alt="BRITANICO" width="150" height="150"/></a>
+    <h3>¿En que año Chili Peper estuvo de gira en Japón?</h3><td></td>
+    <a title="BCP" href="https://www.viabcp.com" target="_blank"><img src="imagenes/BCP.jpg" alt="BCP" width="100" height="100"/></a>
+    <a title="BRITANICO" href="https://www.britanico.edu.pe/" target="_blank"><img src="imagenes/britanico.jpg" alt="BRITANICO" width="100" height="100"/></a>
 
     <div class="container twidth make-flex">
         <p id="question"></p>
         <div class="optnContainer make-flex">
-            <p id="Izquierdo" class="answer">Izquierdo</p>
-            <p id="Derecho" class="answer">Derecho</p>
-            <p id="Los dos" class="answer">Los dos</p>
-            <p id="No pierde ninguno" class="answer">No pierde ninguno</p>
+            <p id="Izquierdo" class="answer">1)     1992</p>
+            <p id="Derecho" class="answer">2)       1989</p>
+            <p id="Los dos" class="answer">3)       1998</p>
+            <p id="1995" class="answer">4)      1995</p>
             <div id="waiting"></div>
             <div id="waitanim"></div>
         </div>
     </div>
-    <div class="score twidth make-flex">
-        <p id="hscore">0</p>
+<br></br>
+    <br></br>
+    <a><b:commandButton value="Terminar" action="salaMusic"/></a>
+    <a><b:commandButton value="Siguiente" action="triviaMusicTwoQuestion"/></a>
 
-    </div>
-    <p  id="skip" class="twidth">adelante</p>
-    <small></small>
 
 </h:body>
 
