--- a/web/category.xhtml
+++ b/web/category.xhtml
@@ -15,7 +15,8 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="application/javascript"/>
-    <link href="css/category.css" rel="stylesheet"/>
+    <link href="css/login.css" rel="stylesheet"/>
+
 </h:head>
 <h:head>
     <b:navBar>
@@ -27,10 +28,13 @@
         </b:navbarLinks>
     </b:navBar>
     <h:outputLabel value=""/>
+</h:head>
+
     <h:form>
+        <div class="space-top text-center">
         <b:commandButton  value="Musica" action="salaMusic" />
 
         <b:commandButton value="Serie" action="salaSerie"/>
+        </div>
     </h:form>
-</h:head>
 </html>
