--- a/web/category.xhtml
+++ b/web/category.xhtml
@@ -15,7 +15,7 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="application/javascript"/>
-    <link href="css/login.css" rel="stylesheet"/>
+    <link href="css/category.css" rel="stylesheet"/>
 
 </h:head>
 <h:head>
@@ -24,17 +24,24 @@
             <b:navLink value="Perfil" href="perfilUsuario.xhtml"></b:navLink>
             <b:navLink value="Ranking" href="ranking.xhtml"></b:navLink>
             <b:navLink value="Categoria" href="category.xhtml"></b:navLink>
-            <b:navLink value="Cerrar Session" href="index.xhtml"></b:navLink>
+            <b:navLink value="Cerrar Sesion" href="index.xhtml"></b:navLink>
         </b:navbarLinks>
     </b:navBar>
-    <h:outputLabel value=""/>
 </h:head>
-
+<body>
     <h:form>
         <div class="space-top text-center">
+            <br></br>
+            <br></br>
+            <br></br>
+            <br></br>
+            <br></br>
+            <br></br>
+            <br></br>
+            <br></br>
         <b:commandButton  value="Musica" action="salaMusic" />
-
         <b:commandButton value="Serie" action="salaSerie"/>
         </div>
     </h:form>
+</body>
 </html>
