--- a/web/ranking.xhtml
+++ b/web/ranking.xhtml
@@ -27,7 +27,7 @@
             <b:navLink value="Cerrar Session" href="index.xhtml"></b:navLink>
         </b:navbarLinks>
     </b:navBar>
-    <b:image name="test" value="imagenes/logo trivia.jpg"/>
+    <b:image name="test" value="imagenes/foto.jpg"/>
     <br></br>
     <h:outputLabel value="Nombre:  #{peopleBean.firstName} "/>
     <br></br>
