Actualizacion de las fotos empresas

--- a/web/triviaMusicTwoQuestion.xhtml
+++ b/web/triviaMusicTwoQuestion.xhtml
@@ -40,12 +40,11 @@
             <div id="waitanim"></div>
         </div>
     </div>
-    <div class="score twidth make-flex">
-        <p id="hscore">0</p>
+    <br></br>
+    <br></br>
+    <a><b:commandButton value="Atras" action="triviaMusicOneQuestion"/></a>
+    <a><b:commandButton value="Terminar" action="salaMusic"/></a>
 
-    </div>
-    <p  id="skip" class="twidth"> Terminar</p>
-    <small></small>
 
 </h:body>
 
