--- a/web/triviaSerieOneQuestion.xhtml
+++ b/web/triviaSerieOneQuestion.xhtml
@@ -40,12 +40,11 @@
             <div id="waitanim"></div>
         </div>
     </div>
-    <div class="score twidth make-flex">
-        <p id="hscore">0</p>
+    <br></br>
+    <br></br>
+    <a><b:commandButton value="Terminar" action="salaSerie"/></a>
+    <a><b:commandButton value="Siguiente" action="triviaSerieTwoQuestion"/></a>
 
-    </div>
-    <p  id="skip" class="twidth">adelante</p>
-    <small></small>
 
 </h:body>
 
