--- a/web/triviaSerieTwoQuestion.xhtml
+++ b/web/triviaSerieTwoQuestion.xhtml
@@ -40,12 +40,10 @@
             <div id="waitanim"></div>
         </div>
     </div>
-    <div class="score twidth make-flex">
-        <p id="hscore">0</p>
-
-    </div>
-    <p  id="skip" class="twidth">adelante</p>
-    <small></small>
+    <br></br>
+    <br></br>
+    <a><b:commandButton value="Atras" action="triviaSerieOneQuestion"/></a>
+    <a><b:commandButton value="Terminar" action="salaSerie"/></a>
 
 </h:body>
 
