Se completo el flujo de navegación

--- a/web/perfilUsuario.xhtml
+++ b/web/perfilUsuario.xhtml
@@ -28,7 +28,7 @@
         </b:navbarLinks>
     </b:navBar>
     <h:form>
-    <h:outputLabel value="PERFIL USUARIO"/> <td></td>  <td></td>    <h:commandButton value="Cerrar Sesión" action="index"/>
+    <h:outputLabel value="PERFIL USUARIO"/>
         <br></br>
         <br></br>
         <br></br>
