--- a/web/salaMusic.xhtml
+++ b/web/salaMusic.xhtml
@@ -45,8 +45,6 @@
     <br></br>
     <h:outputLabel value="Nombre: Pedro "/>
     <br></br>
-    <h:outputLabel value="Puntos: 287"/> <td></td><td></td><h:form><h:commandButton value="JUGAR" action="triviaMusicOneQuestion"/></h:form>
-    <br></br>
-    <br></br>
+    <h:outputLabel value="Puntos: 287"/>
 </h:head>
 </html>
