--- a/web/salaSerie.xhtml
+++ b/web/salaSerie.xhtml
@@ -32,7 +32,9 @@
     <br></br>
     <h:outputLabel value="Nombre:  #{peopleBean.firstName} "/>
     <br></br>
+    <h:form>
     <h:outputLabel value="Puntos: 420"/> <td></td><td></td><h:form><h:commandButton value="CREAR JUEGO" action="createTriviaSerie"/></h:form>
+    </h:form>
     <br></br>
     <br></br>
     <table width="575" border="2" cellspacing="2">
@@ -44,9 +46,8 @@
     <b:image name="test" value="imagenes/foto2.jpg"/>
     <br></br>
     <h:outputLabel value="Nombre: Pedro "/>
+    <h:outputLabel value="Puntos: 287"/>
     <br></br>
-    <h:outputLabel value="Puntos: 287"/> <td></td><td></td><h:form><h:commandButton value="JUGAR" action="triviaSerieOneQuestion"/></h:form>
-    <br></br>
-    <br></br>
+
 </h:head>
 </html>
