--- a/web/triviaMusicOneQuestion.xhtml
+++ b/web/triviaMusicOneQuestion.xhtml
@@ -42,9 +42,10 @@
     </div>
 <br></br>
     <br></br>
+<h:form>
     <a><b:commandButton value="Terminar" action="salaMusic"/></a>
     <a><b:commandButton value="Siguiente" action="triviaMusicTwoQuestion"/></a>
-
+</h:form>
 
 </h:body>
 
