--- a/web/triviaMusicTwoQuestion.xhtml
+++ b/web/triviaMusicTwoQuestion.xhtml
@@ -42,9 +42,10 @@
     </div>
     <br></br>
     <br></br>
+<h:form>
     <a><b:commandButton value="Atras" action="triviaMusicOneQuestion"/></a>
     <a><b:commandButton value="Terminar" action="salaMusic"/></a>
-
+</h:form>
 
 </h:body>
 
