--- a/web/triviaSerieOneQuestion.xhtml
+++ b/web/triviaSerieOneQuestion.xhtml
@@ -42,9 +42,10 @@
     </div>
     <br></br>
     <br></br>
+<h:form>
     <a><b:commandButton value="Terminar" action="salaSerie"/></a>
     <a><b:commandButton value="Siguiente" action="triviaSerieTwoQuestion"/></a>
-
+</h:form>
 
 </h:body>
 
