--- a/web/triviaSerieTwoQuestion.xhtml
+++ b/web/triviaSerieTwoQuestion.xhtml
@@ -42,8 +42,10 @@
     </div>
     <br></br>
     <br></br>
+    <h:form>
     <a><b:commandButton value="Atras" action="triviaSerieOneQuestion"/></a>
     <a><b:commandButton value="Terminar" action="salaSerie"/></a>
+    </h:form>
 
 </h:body>
 
