--- a/web/createTriviaMusic.xhtml
+++ b/web/createTriviaMusic.xhtml
@@ -38,14 +38,20 @@
     <br></br>
     <h:outputLabel value="Nombre: Pedro "/>
     <br></br>
-    <h:outputLabel value="Puntos: 287"/> <td></td><td></td><h:commandButton value="JUGAR" action="triviaMusicOneQuestion"/>
+    <h:form>
+        <h:outputLabel value="Puntos: 287"/> <td></td><td></td><h:form><h:commandButton value="JUGAR" action="triviaMusicOneQuestion"/></h:form>
+    </h:form>
+    <br></br>
+    <br></br>
     <br></br>
     <br></br>
     <b:image name="test" value="imagenes/foto.jpg"/>
     <br></br>
     <h:outputLabel value="Nombre:  #{peopleBean.firstName} "/>
     <br></br>
+    <h:form>
     <h:outputLabel value="Puntos: 420"/> <td></td><td></td><h:commandButton value="CANCELAR" action="salaMusic"/>
+    </h:form>
     <br></br>
     <br></br>
 </h:head>
