--- a/web/triviaMusicOneQuestion.xhtml
+++ b/web/triviaMusicOneQuestion.xhtml
@@ -20,30 +20,35 @@
 
 </h:head>
 
-<h:body class="make-flex">
-    <h2>Trivias 1/10</h2>
-    <br></br>
-    <h1>00:00:34</h1>
+<h:body >
+    <!--RESET & POINTS-->
+    <div class="pointsDisplay">
 
-    <h3>¿En que año Chili Peper estuvo de gira en Japón?</h3><td></td>
-    <a title="BCP" href="https://www.viabcp.com" target="_blank"><img src="imagenes/BCP.jpg" alt="BCP" width="100" height="100"/></a>
-    <a title="BRITANICO" href="https://www.britanico.edu.pe/" target="_blank"><img src="imagenes/britanico.jpg" alt="BRITANICO" width="100" height="100"/></a>
-
-    <div class="container twidth make-flex">
-        <p id="question"></p>
-        <div class="optnContainer make-flex">
-            <p id="Izquierdo" class="answer">1)     1992</p>
-            <p id="Derecho" class="answer">2)       1989</p>
-            <p id="Los dos" class="answer">3)       1998</p>
-            <p id="1995" class="answer">4)      1995</p>
-            <div id="waiting"></div>
-            <div id="waitanim"></div>
-        </div>
+        <h:form>
+            <a><b:commandButton value="Abandonar juego" action="salaMusic"/></a>
+            <a><b:commandButton value="Siguiente" action="triviaMusicTwoQuestion"/></a>
+        </h:form>
+        <br></br>
+        <a title="BCP" href="https://www.viabcp.com" target="_blank"><img src="imagenes/BCP.jpg" alt="BCP" width="100" height="100"/></a>
+        <a title="BRITANICO" href="https://www.britanico.edu.pe/" target="_blank"><img src="imagenes/britanico.jpg" alt="BRITANICO" width="100" height="100"/></a>
     </div>
-<br></br>
-    <br></br>
-    <a><b:commandButton value="Terminar" action="salaMusic"/></a>
-    <a><b:commandButton value="Siguiente" action="triviaMusicTwoQuestion"/></a>
+
+    <!--TRIVIA BOX-->
+    <div class="category">
+        <span id="questionNum">Trivias Música 1/1</span>
+        <br></br>
+        <span id="category"></span>
+    </div>
+    <div class="wrapper">
+        <div id="question">  <h3>¿En qué año Chili Peper estuvo de gira en Japón?</h3></div>
+        <ul id="answers">
+            <li>1)  1992</li>
+            <li>2)  1989</li>
+            <li>3)  1998</li>
+            <li>4)  1995</li>
+        </ul>
+    </div>
+
 
 
 </h:body>
