--- a/web/triviaSerieTwoQuestion.xhtml
+++ b/web/triviaSerieTwoQuestion.xhtml
@@ -20,30 +20,37 @@
 
 </h:head>
 
-<h:body class="make-flex">
-    <h2>Trivias 10/10</h2>
-    <br></br>
-    <h1>00:00:34</h1>
+<h:body >
+    <!--RESET & POINTS-->
+    <div class="pointsDisplay">
 
-    <h3>¿En qué año se emitio la 1ra temporada de Friends?</h3><td></td>>
-    <a title="BCP" href="https://www.viabcp.com" target="_blank"><img src="imagenes/BCP.jpg" alt="BCP" width="100" height="100"/></a>
-    <a title="BRITANICO" href="https://www.britanico.edu.pe/" target="_blank"><img src="imagenes/britanico.jpg" alt="BRITANICO" width="100" height="100"/></a>
+        <h:form>
+            <a><b:commandButton value="Atras" action="triviaSerieOneQuestion"/></a>
+            <a><b:commandButton value="Abandonar Juego" action="salaSerie"/></a>
+        </h:form>
+        <br></br>
+        <a title="BCP" href="https://www.viabcp.com" target="_blank"><img src="imagenes/BCP.jpg" alt="BCP" width="100" height="100"/></a>
+        <a title="BRITANICO" href="https://www.britanico.edu.pe/" target="_blank"><img src="imagenes/britanico.jpg" alt="BRITANICO" width="100" height="100"/></a>
 
-    <div class="container twidth make-flex">
-        <p id="question"></p>
-        <div class="optnContainer make-flex">
-            <p id="Izquierdo" class="answer">1)     1994</p>
-            <p id="Derecho" class="answer">2)       1999</p>
-            <p id="2000" class="answer">3)      2000</p>
-            <p id="1987" class="answer">4)      1987</p>
-            <div id="waiting"></div>
-            <div id="waitanim"></div>
-        </div>
     </div>
-    <br></br>
-    <br></br>
-    <a><b:commandButton value="Atras" action="triviaSerieOneQuestion"/></a>
-    <a><b:commandButton value="Terminar" action="salaSerie"/></a>
+
+    <!--TRIVIA BOX-->
+    <div class="category">
+        <span id="questionNum">Trivias Serie 1/2</span>
+        <br></br>
+        <span id="category"></span>
+    </div>
+    <div class="wrapper">
+        <div id="question">  <h3>¿En qué año se emitió la 1era temporada de Friends?</h3></div>
+        <ul id="answers">
+            <li>1)  1994</li>
+            <li>2)  1999</li>
+            <li>3)  2000</li>
+            <li>4)  1987</li>
+        </ul>
+    </div>
+
+
 
 </h:body>
 
