actualizacion de css a paginas

--- a/web/perfilUsuario.xhtml
+++ b/web/perfilUsuario.xhtml
@@ -16,7 +16,7 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             type="application/javascript"/>
-
+    <link href="css/perfilUsuario.css" rel="stylesheet"/>
 </h:head>
 <h:head>
     <b:navBar>
