--- a/web/perfilUsuario.xhtml
+++ b/web/perfilUsuario.xhtml
@@ -50,7 +50,7 @@
     <h:outputLabel value="  #{peopleBean.userName} " />
         <br></br>
         <br></br>
-    <h:commandButton value="Editar" action="#{peopleBean.editPerson(person)}"/>
+   <!-- <h:commandButton value="Editar" action="#{peopleBean.editPerson(person)}"/>-->
     </h:form>
 </h:head>
 </html>
